maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:27: error: type mismatch;
 found   : Unit
 required: (Int, ShortestPathMaze.this.NeighborPos.NeighborPos)
    (which expands to)  (Int, ShortestPathMaze.this.NeighborPos.Value)
  if (indication < min) {
  ^ShortestPathMaze:37: error: value BOTTOM is not a member of object plm.universe.Direction
      setDirection(Direction.BOTTOM);
                             ^ShortestPathMaze:51: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  var a = processNeighborForExit(x, y, TOP, NO_INDICATION);
                                ^ShortestPathMaze:52: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  a = processNeighborForExit(x, y, BOTTOM, a._1);
                            ^ShortestPathMaze:53: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  a = processNeighborForExit(x, y, LEFT, a._1);
                            ^ShortestPathMaze:54: error: not enough arguments for method processNeighborForExit: (x: Int, y: Int, np: ShortestPathMaze.this.NeighborPos.NeighborPos, min: Int, minNeighbor: ShortestPathMaze.this.NeighborPos.NeighborPos)(Int, ShortestPathMaze.this.NeighborPos.NeighborPos).
Unspecified value parameter minNeighbor.
  a = processNeighborForExit(x, y, RIGHT, a._1);
                            ^